--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "searchbar.js",
   "version": "0.1.0",
-  "description": "Add search bar with a search-as-you-type experience to your documentation using MeiliSearch",
+  "description": "A general front-end search bar using MeiliSearch",
   "main": "dist/npm/index.js",
   "scripts": {
     "build": "./scripts/build",
